force-app/main/default/objects/Maintenance_Work_Order__c/Maintenance_Work_Order__c.object-meta.xml
<CustomObject>
    <description>Contains attributes describing a bus maintenance work order.</description>
    <label>Maintenance Work Order</label>
    <nameField>
        <displayFormat>WO-{000000}</displayFormat>
        <label>Maintenace Work Order Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Work Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>