force-app/main/default/objects/Maintenance_Work_Order__c/fields/Brake_Fluid_Level__c.field-meta.xml
<CustomField>
    <fullName>Brake_Fluid_Level__c</fullName>
    <inlineHelpText>The level of the brake fluid at the time this maintenance order was created.</inlineHelpText>
    <label>Brake Fluid Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>