force-app/main/default/objects/Maintenance_Work_Order__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The bus this work order is for.</inlineHelpText>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Maintenance Work Orders</relationshipLabel>
    <relationshipName>Maintenance_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>