force-app/main/default/objects/Maintenance_Work_Order__c/fields/Bus_Garage_Association__c.field-meta.xml
<CustomField>
    <fullName>Bus_Garage_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The bus and garage this maintenance order is for.</inlineHelpText>
    <label>Bus Garage Association</label>
    <referenceTo>Bus_Garage_Association__c</referenceTo>
    <relationshipLabel>Maintenance Work Orders</relationshipLabel>
    <relationshipName>Maintenance_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>