force-app/main/default/objects/Maintenance_Work_Order__c/fields/Garage__c.field-meta.xml
<CustomField>
    <fullName>Garage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Garage this work order is for.</inlineHelpText>
    <label>Garage</label>
    <referenceTo>Garage__c</referenceTo>
    <relationshipLabel>Maintenance Work Orders</relationshipLabel>
    <relationshipName>Maintenance_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>