force-app/main/default/objects/Maintenance_Work_Order__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <inlineHelpText>Bus odometer reading at time this maintenance was scehduled.</inlineHelpText>
    <label>Odometer Reading</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>