force-app/main/default/objects/Maintenance_Work_Order__c/fields/Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level__c</fullName>
    <inlineHelpText>The oil level at the time this maintenance request was scheduled.</inlineHelpText>
    <label>Oil Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>