force-app/main/default/objects/Maintenance_Work_Order__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <inlineHelpText>Reason for scheduling maintenance.</inlineHelpText>
    <label>Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>