force-app/main/default/objects/Maintenance_Work_Order__c/fields/Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time__c</fullName>
    <inlineHelpText>The scheduled time of the maintenance.</inlineHelpText>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>