force-app/main/default/objects/Maintenance_Work_Order__c/fields/Tire_Condition__c.field-meta.xml
<CustomField>
    <fullName>Tire_Condition__c</fullName>
    <inlineHelpText>The condition of the tires on the bus at the time this maintenance order was created.</inlineHelpText>
    <label>Tire Condition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>